Juan Pablo Marcial
Desarrollo de el Contenido de Conceptos y agrego las imágenes

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<footer>
 			<p>Universidad Nacional Abierta y a Distancia - UNAD</p>
              <div class="info_sede div">
-                <p> Presentado por: SEBATIAN TRUJILLO, Tutor:Ing. JOSUE IGNACIO OCHOA                </p>
+                <p> Presentado por: JUAN PABLO MARCIAL, Tutor:Ing. JOSUE IGNACIO OCHOA                </p>
             </div>
 			<p>Diseño de sitios web</p>
 			<p></p>
