--- a/Conceptos.html
+++ b/Conceptos.html
@@ -156,7 +156,7 @@
 		<footer>
 			<p>Universidad Nacional Abierta y a Distancia - UNAD</p>
           
-                <p> Presentado por: SEBATIAN TRUJILLO, Tutor:Ing. JOSUE IGNACIO OCHOA                </p>
+                    <p> Presentado por: JUAN PABLO MARCIAL, Tutor:Ing. JOSUE IGNACIO OCHOA                </p>
             </div>
 			<p>Diseño de sitios web</p>
 			<p></p>
