--- a/autores.html
+++ b/autores.html
@@ -67,7 +67,7 @@
 		<a class="twitter-timeline" data-width="300" data-height="600" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</aside>
 
-		footer>
+		<footer>
 			<p>Universidad Nacional Abierta y a Distancia - UNAD</p>
              <div class="info_sede div">
                   <p> Presentado por: JUAN PABLO MARCIAL, Tutor:Ing. JOSUE IGNACIO OCHOA                </p>
